<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.activity.AboutActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.hjq.widget.view.ScaleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:src="@mipmap/app_logo"
        app:scaleRatio="1.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#222222"
            android:textSize="18sp" />

        <View
            android:id="@+id/v_setting_bar_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:background="#ececec" />

        <com.hjq.widget.layout.SettingBar
            android:id="@+id/sb_to_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:bar_leftText="@string/to_score"
            app:bar_rightIcon="@drawable/ico_go_black" />

        <com.hjq.widget.layout.SettingBar
            android:id="@+id/sb_setting_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:bar_leftText="@string/complaint"
            app:bar_rightIcon="@drawable/ico_go_black" />

        <com.hjq.widget.layout.SettingBar
            android:id="@+id/sb_version_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:bar_leftText="@string/version_update"
            app:bar_rightIcon="@drawable/ico_go_black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_soft_allow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soft_allow"
            android:textColor="#2B5190"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="和"
            android:textColor="@color/black_333333"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_personal_protect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_protect"
            android:textColor="#2B5190"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>