<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160.5dp"
    android:layout_height="wrap_content"
    android:background="@drawable/message_more"
    android:orientation="vertical"
    android:gravity="start"
    >
    <LinearLayout
        android:id="@+id/linearlayout_adduser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center|start"
        android:layout_marginTop="5dp"
        android:paddingStart="27dp"
        android:paddingLeft="27dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@mipmap/adduser"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:layout_marginStart="13.5dp"
            android:layout_marginLeft="13.5dp"
            android:text="@string/adduser"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center|start"
        android:paddingStart="27dp"
        android:paddingLeft="27dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@mipmap/add_qrcode"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:layout_marginStart="13.5dp"
            android:layout_marginLeft="13.5dp"
            android:text="@string/scan_it"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_group_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center|start"
        android:paddingStart="27dp"
        android:paddingLeft="27dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@mipmap/group_chat"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:layout_marginStart="13.5dp"
            android:layout_marginLeft="13.5dp"
            android:text="@string/add_group_chat"/>
    </LinearLayout>

</LinearLayout>