<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:layoutAnimation="@anim/layout_animation_from_bottom"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity"
    tools:layoutAnimation="@null">

    <com.hjq.bar.TitleBar
        android:id="@id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:backButton="false"
        app:barStyle="transparent"
        app:rightColor="@color/colorAccent"
        app:title="" />

    <LinearLayout
        android:id="@+id/ll_login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="136dp"
            android:layout_height="95dp"
            android:layout_gravity="center"
            android:background="@drawable/login_logo" />


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_home_text"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_area_code"
            style="@style/EditTextStyle"
            android:layout_width="70dp"
            android:layout_height="54dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:hint="区号"
            android:singleLine="true"
            android:paddingLeft="15dp"
            android:gravity="center"
            android:drawableLeft="@drawable/login_phone"
            android:text="86"/>

        <com.hjq.widget.view.ClearEditText
            android:id="@+id/et_login_phone"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/et_area_code"
            android:gravity="center"
            android:hint="@string/common_phone_input_hint"
            android:singleLine="true"
            android:layout_alignParentRight="true"
            />

       <!-- <ImageView
            android:id="@+id/phone_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/login_phone" />-->

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/et_login_password"
            style="@style/EditTextStyle"
            android:layout_width="315dp"
            android:layout_height="54dp"
            android:layout_below="@+id/et_login_phone"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:hint="@string/common_password_input_error"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:drawableLeft="@drawable/login_password"/>

     <!--   <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_login_phone"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="34dp"
            android:src="@drawable/login_password" />-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/ButtonStyle"
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:layout_below="@+id/et_login_password"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="40dp"
            android:text="@string/login_text" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/Register_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="没有账号？"
            android:textColor="#ff666666"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="快速注册"
            android:textColor="#fff7bc65"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>